--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1551,7 +1551,7 @@ html, body {
   height: auto;
   .publi-container {
     width: 66%;
-    margin: 0px 0px 0px 160px;
+    margin: 0px 0px 0px 151px;
     padding: 130px 0px 0px 0px;
   }
   h3 {
@@ -1763,7 +1763,7 @@ html, body {
   .publis {
     grid-template-columns: repeat(2, 400px) !important;
     -ms-grid-template-columns: repeat(2, 400px) !important;
-    .publicacion{
+    .publicacion, .reportaje {
       &:nth-child(2), &:nth-child(4), &:nth-child(6) {
         &:before {
           content: none;
