--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1673,6 +1673,12 @@ html, body {
   #out-features .feature {
     min-width: 60px; }
 
+#header-event-fr .header-container {
+  margin-top: 0px; }
+
+#header-event-fr .send-info {
+  margin-top: 100px; }
+
 #phantom-div {
   display: none; }
 
@@ -2316,7 +2322,7 @@ html, body {
     height: auto !important; }
   .header-txt .txt {
     max-width: 86%;
-    line-height: 80px !important; }
+    line-height: 100px !important; }
   .header-comment .comment {
     margin: 0px auto 20px auto;
     width: 80%; }
@@ -2531,6 +2537,8 @@ html, body {
     margin-bottom: 140px !important;
     margin-top: 50px !important;
     min-height: 470px !important; }
+  #header-event-fr .header-container {
+    margin-top: 100px; }
   .send-info-container {
     height: 850px !important; }
     .send-info-container .send-info {
