--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1762,6 +1762,14 @@ html, body {
     min-width: 60px;
   }
 }
+#header-event-fr {
+  .header-container {
+    margin-top: 0px;
+  }
+  .send-info {
+    margin-top: 100px;
+  }
+}
 #phantom-div {
   display: none;
 }
@@ -2473,7 +2481,8 @@ html, body {
     height: auto !important; }
   .header-txt .txt {
     max-width: 86%;
-  line-height: 80px !important;}
+    line-height: 100px !important;
+  }
   .header-comment .comment {
     margin: 0px auto 20px auto;
     width: 80%; }
@@ -2715,7 +2724,12 @@ html, body {
         .header-event .header-txt {
           margin-bottom: 140px !important;
           margin-top: 50px !important;
-            min-height: 470px !important;
+          min-height: 470px !important;
+        }
+        #header-event-fr {
+          .header-container {
+            margin-top: 100px;
+          }
         }
         .send-info-container {
           height: 850px !important;
