--- a/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
+++ b/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
@@ -201,6 +201,7 @@ form, .inputs-container {
   height: auto;
   z-index: 100;
   margin-top: 170px;
+  margin-bottom: 170px;
   position: relative; }
   .more-popular .title-container {
     position: absolute;
