--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -4930,10 +4930,11 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   background: #175DA3; }
 
 nav#layout-mainmenu ul li .mainmenu-accountmenu li a:hover, nav#layout-mainmenu ul li .mainmenu-accountmenu li a:focus {
-  background: #175DA3 !important; }
+  background: #E8E8E8 !important;
+  color: #818181 !important; }
 
 nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:hover:after, nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:focus:after, nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:active:after {
-  border-bottom: 7px solid #175DA3 !important; }
+  border-bottom: 7px solid #E8E8E8 !important; }
 
 .form-group.is-required > label:after {
   background-color: #175DA3 !important; }
@@ -5381,10 +5382,11 @@ table.name-value-list > a:hover, table.name-value-list > a:focus, table.name-val
   color: #818181 !important; }
 
 .dropdown-menu .dropdown-container > ul li a:hover, .dropdown-menu .dropdown-container > ul li a:focus {
-  background-color: #175DA3; }
+  background-color: #E8E8E8;
+  color: #818181; }
 
 .dropdown-menu .dropdown-container > ul li.first-item a:hover:after, .dropdown-menu .dropdown-container > ul li.first-item a:focus:after, .dropdown-menu .dropdown-container > ul li.first-item a:active:after {
-  border-bottom: 8px solid #175DA3 !important; }
+  border-bottom: 8px solid #E8E8E8 !important; }
 
 .compact-container label {
   color: #818181; }
