rutas & multilang template

--- a/themes/default/layouts/ruta.htm
+++ b/themes/default/layouts/ruta.htm
@@ -1,4 +1,4 @@
-description = "Playa Layout"
+description = "Expereince Layout"
 
 [staticPage]
 useContent = 1
@@ -28,9 +28,6 @@ code = "que-hacer"
         if($this['lang']==''){
             $this['lang']='es';
         }
-
-        $this['beaches'] = $this->staticApp->beachList();
-
     }
 
 ?>
@@ -46,6 +43,7 @@ code = "que-hacer"
     <title>Cádiz</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/css/iziModal.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-comarcas.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-village.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-event.css"/>
@@ -58,7 +56,7 @@ code = "que-hacer"
     <meta name="theme-color" content="#ffffff">
 </head>
 
-    {% partial 'site/header' %}
+    {% partial 'site/headerruta' %}
 
     {% component 'staticPage' %}
 
@@ -78,7 +76,7 @@ code = "que-hacer"
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
-<script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
 
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
 
