--- a/themes/default/partials/allrutas.htm
+++ b/themes/default/partials/allrutas.htm
@@ -13,34 +13,33 @@
 ?>	
 
 ==
-{% if events|length > 0 %}
+{% if rutas|length > 0 %}
   <div class="more-popular">
     	<div class="title-container">
       <p class="title">MÁS <br> POPULARES <br> EN CÁDIZ </p>
         <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
     	</div>
    	<div class="main-events-container">
-  	{% for event in events %}
+  	{% for ruta in rutas %}
   	    <!--  MÁS POPULARES -->
           <div class="event">
             <div class="overlay-img"></div>
-            <img class="rec-img" src="{{event.viewBag.cover}}">
+            <img class="rec-img" src="{{ruta.viewBag.cover}}">
             <div class="txt-container">
-              <p class="date">{{event.date_start_pretty_day}} {{event.date_start_pretty_month|_}}</p>
-              <p class="name">{{event.viewBag.title}}</p>
+              <p class="name">{{ruta.viewBag.title}}</p>
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
               <div class="icons">
                 <div class="icon-pair">
-                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(event.viewBag.category)}}.svg">
-                  <p class="icon-txt">{{event.viewBag.category}}</p>
+                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(ruta.viewBag.category)}}.svg">
+                  <p class="icon-txt">{{ruta.viewBag.category}}</p>
                 </div>
                 <div class="icon-pair">
                   <img src="{{preurl}}/storage/app/media/uploaded-files/templates/loc-events.svg">
-                  <p class="icon-txt">{{event.location}}</p>
+                  <p class="icon-txt">{{ruta.location}}</p>
                 </div>
               </div>
               <div class="button-container">
-                <a class="see-event" href="{{url('/')}}/{{lang}}{{event.viewBag.url}}">{{'Ver evento'|_}}_ <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg"></a>
+                <a class="see-event" href="{{url('/')}}/{{lang}}{{ruta.viewBag.url}}">{{'Ver ruta'|_}}_ <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg"></a>
               </div>
             </div>
           </div>
