--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -55,7 +55,7 @@
             {% set tt = '.'~item.title %}             
             <li class="menu-item"><a href="{{ item.url }}">{{ tt|_ }}</a></li>
           {% endfor %} 
-            <li class="menu-item"><a href="todos-los-eventos">{{ 'Todos los eventos'|_ }}</a></li>              
+            <li class="menu-item"><a href="{{url('/')}}/{{lang}}/todos-los-eventos">{{ 'Todos los eventos'|_ }}</a></li>              
         </ul>
       </div>
      
@@ -138,7 +138,7 @@
               {% set tt = '.'~item.title %} 
               <li class="menu-item"><a href="{{ item.url }}">{{tt|_}}</a></li>
             {% endfor %}
-              <li class="menu-item"><a href="todos-los-eventos">{{ 'Todos los eventos'|_ }}</a></li>
+              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/todos-los-eventos">{{ 'Todos los eventos'|_ }}</a></li>
           </ul>
         </div>
         <div class="menu-list">
