--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -63,7 +63,7 @@ code = "que-hacer"
 
     <div class="vertical-share">
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
-        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{ url('/') }}" target="_blank">Facebook&nbsp;</a>
+        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{ this.page.id | page }}" target="_blank">Facebook&nbsp;</a>
                 <span>·</span>
             <a data-action="share/whatsapp/share" href="href=">Whatsapp&nbsp;</a>
             <span>·</span>
