--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -64,8 +64,9 @@ code = "que-hacer"
 
     <div class="vertical-share">
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
-        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u=cadizturismo.jekyllme.com">Facebook&nbsp;</a>
-            <span>·</span>
+        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{ this.page.id | page }}" target="_blank">Facebook&nbsp;</a>
+
+                <span>·</span>
             <a data-action="share/whatsapp/share" href="href=">Whatsapp&nbsp;</a>
             <span>·</span>
             <a href="https://twitter.com/home?status=cadizturismo.jekyllme.com">Twitter&nbsp;</a>
