--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -64,7 +64,7 @@ code = "que-hacer"
 
     <div class="vertical-share">
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
-        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{ ''| page }}" target="_blank">Faacebook&nbsp;</a>
+        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{ url('/'.lang) }}" target="_blank">Faacebook&nbsp;</a>
 
                 <span>·</span>
             <a data-action="share/whatsapp/share" href="href=">Whatsapp&nbsp;</a>
