--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -31,6 +31,8 @@ code = "que-hacer"
 
         $this['beaches'] = $this->staticApp->beachList();
 
+        dump($this->currentPageUrl());
+
     }
 
 ?>
