--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -30,7 +30,8 @@ code = "que-hacer"
         }
 
         $this['beaches'] = $this->staticApp->beachList();
-        dump($this['beaches']);
+        dump($this['event']);
+        dump($this['events']);
     }
 
 ?>
