--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -30,8 +30,7 @@ code = "que-hacer"
         }
 
         $this['beaches'] = $this->staticApp->beachList();
-        dump($this['event']);
-        dump($this['events']);
+        dump($this->page);
     }
 
 ?>
