--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -30,7 +30,7 @@ code = "que-hacer"
         }
 
         $this['beaches'] = $this->staticApp->beachList();
-        dump($this->page);
+        dump($this->page->url);
     }
 
 ?>
