--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -30,8 +30,9 @@ code = "que-hacer"
         }
 
         $this['beaches'] = $this->staticApp->beachList();
-        dump($this->page->url);
-    }
+
+        $this['urlPage'] = $this->page->url;
+}
 
 ?>
 
@@ -64,7 +65,7 @@ code = "que-hacer"
 
     <div class="vertical-share">
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
-        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{url('/')}}/{{lang}}{{event.viewBag.url}}" target="_blank">Faacebook{{lang}}&nbsp;</a>
+        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{url('/')}}/{{lang}}{{urlPage}}" target="_blank">Faacebook{{lang}}&nbsp;</a>
 
                 <span>·</span>
             <a data-action="share/whatsapp/share" href="href=">Whatsapp&nbsp;</a>
