--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -2,10 +2,15 @@
 
 <?php
 
-    function onStart()
-    {      
+  function onStart()
+  {
+     if (strpos($_SERVER['HTTP_HOST'], 'localhost') !== false) {
+          $this['preurl'] = '/cadizturismo';
+     } else {
+        $this['preurl'] = '';
+     }
+  }
 
-    }
 ?>
 
 ==
@@ -14,14 +19,14 @@
 <div class="slidemenu">
   <div class="elements">
     <div class="logo-container">
-      <a href="{{url('/')}}/{{lang}}"><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/cadiz-menu.svg" alt=""></a>
+      <a href="{{url('/')}}/{{lang}}"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/cadiz-menu.svg" alt=""></a>
     </div>
     <div class="menus">
       
       <div class="menu-list">
         <p class="menu-title">{{ 'Dónde ir'|_ }}</p>
-        <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-        <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+        <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+        <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
         <ul class="menu-ul donde-ul">
           {% for item in staticMenu.menuItems %}
             {% set tt = '.'~item.title %}
@@ -36,20 +41,23 @@
       
       <div class="menu-list">
         <p class="menu-title">{{ 'Qué Hacer'|_ }}</p>
-        <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-        <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+        <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+        <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
         <ul class="menu-ul">
           {% for item in staticMenu4.menuItems %}
             {% set tt = '.'~item.title %}
             <li class="menu-item"><a href="{{ item.url }}">{{ tt|_ }}</a></li>
+            {% if item.title == 'Playas' %}
+            <li class="menu-item"><a href="{{url('/')}}/{{lang}}/todas-las-rutas">{{'Rutas'|_ }}</a></li>
+            {% endif %}
           {% endfor %}
         </ul>
       </div>
       
       <div class="menu-list">
         <p class="menu-title">{{ 'Qué Vivir'|_ }}</p>
-        <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-        <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+        <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+        <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
         <ul class="menu-ul">
           {% for item in staticMenu2.menuItems %}
             {% set tt = '.'~item.title %}             
@@ -61,8 +69,8 @@
      
       <div class="menu-list">
         <p class="menu-title">{{ 'Mi estancia'|_ }}</p>
-        <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-        <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+        <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+        <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
         <ul class="menu-ul">
           {% for item in staticMenu3.menuItems %}
             {% set tt = '.'~item.title %}
@@ -78,13 +86,13 @@
       <div class="middle-bar"></div>
       <div class="bottom-bar"></div>
     </label>
-    <img class="normal" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/top-menu.svg">
-    <img class="mobile" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/top-mobile.svg">
+    <img class="normal" src="{{preurl}}/storage/app/media/uploaded-files/templates/top-menu.svg">
+    <img class="mobile" src="{{preurl}}/storage/app/media/uploaded-files/templates/top-mobile.svg">
   </div>
 </div>
 
 <div class="mini-logo-container">
-  <a href="{{url('/')}}/{{lang}}"><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg"></a>
+  <a href="{{url('/')}}/{{lang}}"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/mini-logo.svg"></a>
 </div>
 <div class="language-container">
   <!-- Añadir la clase 'active-lang' al enlace cuando esté activo el idioma correspondiente - de ejemplo está puesto en ESPAÑOL -->
@@ -104,13 +112,13 @@
     </div>
     <div class="menu">
       <div class="logo-container">
-        <a href="{{url('/')}}/{{lang}}"><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/cadiz-menu.svg" alt=""></a>
+        <a href="{{url('/')}}/{{lang}}"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/cadiz-menu.svg" alt=""></a>
       </div>
       <div class="menus">
         <div class="menu-list">
           <p class="menu-title">{{ 'Dónde ir'|_ }}</p>
-          <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-          <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+          <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+          <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
           <ul class="menu-ul donde-ul where-ul">
             {% for item in staticMenu.menuItems %}   
               {% set tt = '.'~item.title %}           
@@ -120,8 +128,8 @@
         </div>
         <div class="menu-list">
           <p class="menu-title">{{ 'Qué Hacer'|_  }}</p>
-          <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-          <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+          <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+          <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
           <ul class="menu-ul do-ul">
             {% for item in staticMenu4.menuItems %}
               {% set tt = '.'~item.title %}              
@@ -131,8 +139,8 @@
         </div>
         <div class="menu-list">
           <p class="menu-title">{{ 'Qué Vivir'|_ }}</p>
-          <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-          <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+          <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+          <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
           <ul class="menu-ul live-ul">
             {% for item in staticMenu2.menuItems %}
               {% set tt = '.'~item.title %} 
@@ -143,8 +151,8 @@
         </div>
         <div class="menu-list">
           <p class="menu-title">{{ 'Mi estancia'|_ }}</p>
-          <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
-          <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
+          <img class="separator separator-menu" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+          <img class="separator-tiny" src="{{preurl}}/storage/app/media/uploaded-files/templates/tiny-separator.svg">
           <ul class="menu-ul stance-ul">
             {% for item in staticMenu3.menuItems %}
               {% set tt = '.'~item.title %} 
