--- a/themes/default/partials/site/header.htm
+++ b/themes/default/partials/site/header.htm
@@ -1,1 +1,18 @@
+==
+
+<?php
+
+  function onStart()
+  {
+     if (strpos($_SERVER['HTTP_HOST'], 'localhost') !== false) {
+          $this['preurl'] = '/cadizturismo';
+     } else {
+        $this['preurl'] = '';
+     }
+  }
+
+?>
+
+==
+<!-- MENU-->	
 {% partial "site/menu" %}
