--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -65,12 +65,12 @@ code = "que-hacer"
 
     <div class="vertical-share">
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
-        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{url('/')}}/{{lang}}{{urlPage}}" target="_blank">Faacebook{{lang}}&nbsp;</a>
+        <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{url('/')}}/{{lang}}{{urlPage}}" target="_blank">Facebook&nbsp;</a>
 
                 <span>·</span>
-            <a data-action="share/whatsapp/share" href="href=">Whatsapp&nbsp;</a>
+            <a data-action="share/whatsapp/share" href="href={{url('/')}}/{{lang}}{{urlPage}}">Whatsapp&nbsp;</a>
             <span>·</span>
-            <a href="https://twitter.com/home?status=cadizturismo.jekyllme.com">Twitter&nbsp;</a>
+            <a href="https://twitter.com/home?status={{url('/')}}/{{lang}}{{urlPage}}" target="_blank" >Twitter&nbsp;</a>
         </div>
     </div>
 
