--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -32,6 +32,9 @@ code = "que-hacer"
         $this['beaches'] = $this->staticApp->beachList();
 
         $this['urlPage'] = $this->page->url;
+        dump($this['cover']);
+        $this['cover'] = $this->page->cover;
+        dump($this['cover']);
 }
 
 ?>
