--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -32,9 +32,7 @@ code = "que-hacer"
         $this['beaches'] = $this->staticApp->beachList();
 
         $this['urlPage'] = $this->page->url;
-        dump($this['cover']);
-        $this['cover'] = $this->page->cover;
-        dump($this['cover']);
+        dump($this);
 }
 
 ?>
