--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -32,7 +32,8 @@ code = "que-hacer"
         $this['beaches'] = $this->staticApp->beachList();
 
         $this['urlPage'] = $this->page->url;
-        dump($this->page->apiBag["staticPage"]->attributes);
+        dump($this->page->apiBag["staticPage"]->attributes["content"]);
+        dump($this);
 }
 
 ?>
