--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1401,6 +1401,14 @@ nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:hover:after, na
   margin-bottom: 0px;
 }
 
+.control-treeview ol > li > div > span.expand:before {
+  top: 6px;
+}
+
+.control-treeview ol > li > div:before {
+  top: 19px;
+}
+
 .control-treeview a.menu-control:hover, .control-treeview a.menu-control:focus,
 .control-treeview ol > li > div.popover-highlight {
   background-color: #818181 !important;
@@ -1422,7 +1430,7 @@ nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:hover:after, na
   border-bottom: none !important;
 }
 
-/* CALENDAR */
+/* CALENDAR - EVENTOS */
 .pika-single {
   //width: 20.5%;
   width: 296px;
@@ -1462,7 +1470,35 @@ nav#layout-mainmenu ul li .mainmenu-accountmenu li:first-child a:hover:after, na
   }
 }
 
-
+.order-container {
+  height: 50px;
+  background-color: #E8E8E8;
+  @include flexbox();
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  a {
+    display: block;
+    width: calc(100% / 3);
+    width: -webkit-calc(100% / 3);
+    width: -moz-calc(100% / 3);
+    color: #818181;
+    font-size: 11px;
+    text-align: center;
+    padding: 18px 0px;
+    transition: background-color 0.3s ease;
+    border-right: 1px solid #CECECE;
+    &:hover {
+      background-color: #CECECE;
+    }
+    &:last-child {
+      border-right: none;
+    }
+  }
+  .active-a {
+      background-color: #CECECE;
+  }
+}
 
 @mixin transform($value...) {
 -webkit-transform: $value;
