--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -22,7 +22,9 @@ code = "que-hacer"
         if($this['lang']==''){
             $this['lang']='es';
         }
-    }
+                $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+
+}
 
 ?>
 
@@ -35,6 +37,8 @@ code = "que-hacer"
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="google-site-verification" content="KZtyPnD_0KXDnRTpmvwxNoBcvj3Osx_VKrXoJaucHrE" />
+    <meta property="og:image" content="{{ this.page.meta_image }}">
+
     <title>Cádiz</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
