--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1292,6 +1292,12 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   padding-bottom: 20px;
 }
 
+#layout-side-panel {
+  .menu-list {
+    margin-top: 0px !important;
+  }
+}
+
 /* MENÚ */
 .w-350 {
   width: 308px !important;
