--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -37,7 +37,7 @@ code = "que-hacer"
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="google-site-verification" content="KZtyPnD_0KXDnRTpmvwxNoBcvj3Osx_VKrXoJaucHrE" />
-    <meta property="og:image" content="{{ this.page.meta_image }}">
+    <meta property="og:image" content="{{ metaImg }}">
 
     <title>Cádiz</title>
 
