--- a/themes/default/layouts/ruta.htm
+++ b/themes/default/layouts/ruta.htm
@@ -69,7 +69,7 @@ $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cov
         <p class="also-title">{{'COMPARTIR'|_}}</p><img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-sep.svg" class="fr-fil fr-dib">
         <div class="links-container"><a href="https://www.facebook.com/sharer/sharer.php?u={{url('/')}}/{{lang}}{{urlPage}}" target="_blank">Facebook&nbsp;</a>
             <span>·</span>
-            <a data-action="share/whatsapp/share" href="href={{url('/')}}/{{lang}}{{urlPage}}">Whatsapp&nbsp;</a>
+            <a data-action="share/whatsapp/share" href="whatsapp://send?text={{url('/')}}/{{lang}}{{urlPage}}">Whatsapp&nbsp;</a>
             <span>·</span>
             <a href="https://twitter.com/home?status={{url('/')}}/{{lang}}{{urlPage}}" target="_blank" >Twitter&nbsp;</a>
         </div>
