--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -30,9 +30,12 @@ code = "que-hacer"
         }
 
         $this['beaches'] = $this->staticApp->beachList();
-
+        
         $this['urlPage'] = $this->page->url;
-        $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+
+        if($this->page->apiBag){
+            $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+        }
 }
 
 ?>
