--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -29,9 +29,11 @@ code = "que-hacer"
             $this['lang']='es';
         }
 
-                $this['urlPage'] = $this->page->url;
-$this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
-
+        $this['urlPage'] = $this->page->url;
+        
+        if($this->page->apiBag){    
+            $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
+        }
 
 }
 
